--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node-dev ./bin/www"
+    "start": "node-dev ./bin/www",
+    "test": "mocha -R spec 'components/**/*spec.js'",
+    "test:watch": "npm test -- --watch"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -14,6 +16,8 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
-    "node-dev": "^3.1.3"
+    "mocha": "^5.2.0",
+    "node-dev": "^3.1.3",
+    "supertest": "^3.3.0"
   }
 }
