--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
+    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "node-dev": "^3.1.3",
     "supertest": "^3.3.0"
